03-k8s-deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: case-study
  labels:
    app: streamlit-app
    env: production
