03-k8s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-app
  namespace: case-study
  labels:
    app: streamlit-app
spec:
  type: NodePort
  selector:
    app: streamlit-app
  ports:
    - name: http
      port: 8080        # case'in istediği service port
      targetPort: 8501  # pod içindeki streamlit portu
      nodePort: 80      # kube-apiserver --service-node-port-range=80-32767 ile açıldı
